@@ -10,3 +10,4 @@ pref("gconversation.button.mark_as_read", true);
 pref("gconversation.button.open_in_new_tab", true);
 pref("gconversation.html", true);
 pref("gconversation.focus_first", false);
+pref("gconversation.reverse_order", false);
