@@ -11,10 +11,11 @@ positives.
 - Many improvements to the way HTML messages are displayed: JS, displaying
 images now follow the global content policy, inline images are properly
 displayed, HTML is sanitized, and many more...
-- Fixes a bug where a thread would be incorrectly summarized as more than one
-conversation. This is actually a bug in Thunderbird, see bug 538750.
 - Added a small button that allows you to toggle between monospaced and regular
 font for viewing plain/text messages. Useful for Bugzilla emails for instance.
+- Added an option to reverse the order of messages (last -> first)
+- Fixes a bug where a thread would be incorrectly summarized as more than one
+conversation. This is actually a bug in Thunderbird, see bug 538750.
 - Fixed a bug that would render tab characters incorrectly in plain/text
 messages with fixed-width fonts.
 - "Mark all read" now also marks your own messages as read. The menuitem was
